--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div class="branding-box">
     <img src="logo.png" alt="Program Logo"> 
-    <h1>Carbon Clarity Africa</h1>
+    <h1>Public Square Portable Monitor Borrowning Programme</h1>
     <p>Visualizing community-led air quality monitoring across Kampala.</p>
 </div>
 
@@ -108,11 +108,11 @@
     // 4. YOUR FILES LIST
     const dataFiles = [
         { file: "julian.csv", contributor: "Owomugisha Julian" },
-       { file: "boda.csv", contributor: "Boda Boda man" },
-      { file: "raymond.csv", contributor: "Mujuni Raymond" },
-     { file: "ritah.csv", contributor: "Arinaitwe Ritah" },
-    { file: "joseph1.csv", contributor: "Joe Walker" },
-    { file: "joseph.csv", contributor: "Joseph Beyanga" },
+        { file: "raymond.csv", contributor: "Mujuni Raymond" },
+        { file: "ritah.csv", contributor: "Arinaitwe Ritah" },
+        { file: "joseph1.csv", contributor: "Joe Walker" },
+        { file: "joseph.csv", contributor: "Joseph Beyanga" },
+        { file: "boda.csv", contributor: "Boda Boda Man" },
         // { file: "joseph.csv", contributor: "Joseph Beyanga" },
     ];
 
