--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             }
         });
     });
+    if (!labelAdded) { ... }
 
     // 6. Add Legend
     var legend = L.control({position: 'bottomleft'});
