--- a/index.html
+++ b/index.html
@@ -112,6 +112,15 @@
         { file: "ritah.csv", contributor: "Arinaitwe Ritah" },
         { file: "joseph1.csv", contributor: "Joe Walker" },
         { file: "joseph.csv", contributor: "Joseph Beyanga" },
+        { file: "jackie.csv", contributor: "Jackline Asiimwe" },
+        { file: "raymondz.csv", contributor: "Raymond" },
+        { file: "mackline.csv", contributor: "Arinda Mackline" },
+        { file: "joel.csv", contributor: "Joel Mukisa" },
+        { file: "canary.csv", contributor: "Mugume Canary" },
+        { file: "julian1.csv", contributor: "Tabaro Julian" },
+        { file: "julian2.csv", contributor: "Tabaro Julian" },
+        { file: "julian3.csv", contributor: "Owomugisha Julian" },
+        { file: "inasio.csv", contributor: "Inasio Govule" },
         { file: "boda.csv", contributor: "Boda Boda Man" },
         // { file: "joseph.csv", contributor: "Joseph Beyanga" },
     ];
