--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
       { file: "julian2.csv",  contributor: "Tabaro Julian" },
       { file: "julian3.csv",  contributor: "Owomugisha Julian" },
       { file: "inasio.csv",   contributor: "Inasio Govule" },
+      { file: "muhoza.csv",  contributor: "Muhoza Maria" },
       { file: "boda.csv",     contributor: "Boda Boda Man" }
     ];
 
