--- a/index.html
+++ b/index.html
@@ -282,8 +282,8 @@
       </div>
     </div>
     <div class="tiny">
-      <div><b>How to read:</b> colored dots represent PM2.5 (µg/m³).</div>
-      <div><b>Note:</b> community measurements, not official regulatory data.</div>
+      <div><b>How to read:</b> Colored dots represent PM2.5 (µg/m³).</div>
+      <div><b>Note:</b> Community measurements, not official regulatory data.</div>
       <div id="lastUpdated"></div>
     </div>
   </div>
