--- a/index.html
+++ b/index.html
@@ -408,6 +408,13 @@
       { file: "julian3.csv",  contributor: "Owomugisha Julian" },
       { file: "inasio.csv",   contributor: "Inasio Govule" },
       { file: "muhoza.csv",   contributor: "Muhoza Maria" },
+      { file: "otim1.csv",   contributor: "Otim Geoffery1" },
+      { file: "otim2.csv",   contributor: "Otim Geoffery2" },
+      { file: "otim3.csv",   contributor: "Otim Geoffery3" },
+      { file: "otim4.csv",   contributor: "Otim Geoffery4" },
+      { file: "public square.csv",   contributor: "Public Square Team" },
+      { file: "local works.csv",   contributor: "Localworks UG" },
+      { file: "norman.csv",   contributor: "Norman Westphal" },
       { file: "boda.csv",     contributor: "Boda Boda Man" }
     ];
 
