--- a/index.html
+++ b/index.html
@@ -403,9 +403,9 @@
       { file: "mackline.csv", contributor: "Arinda Mackline" },
       { file: "joel.csv",     contributor: "Joel Mukisa" },
       { file: "canary.csv",   contributor: "Mugume Canary" },
-      { file: "julian1.csv",  contributor: "Tabaro Julian" },
+      { file: "julian1.csv",  contributor: "Tabaro Julian1" },
       { file: "julian2.csv",  contributor: "Tabaro Julian" },
-      { file: "julian3.csv",  contributor: "Owomugisha Julian" },
+      { file: "julian3.csv",  contributor: "Owomugisha Julian1" },
       { file: "inasio.csv",   contributor: "Inasio Govule" },
       { file: "muhoza.csv",   contributor: "Muhoza Maria" },
       { file: "otim1.csv",   contributor: "Otim Geoffery1" },
