--- a/index.html
+++ b/index.html
@@ -403,17 +403,17 @@
       { file: "mackline.csv", contributor: "Arinda Mackline" },
       { file: "joel.csv",     contributor: "Joel Mukisa" },
       { file: "canary.csv",   contributor: "Mugume Canary" },
-      { file: "julian1.csv",  contributor: "Tabaro Julian1" },
+      { file: "julian1.csv",  contributor: "Tabaro Juliann" },
       { file: "julian2.csv",  contributor: "Tabaro Julian" },
-      { file: "julian3.csv",  contributor: "Owomugisha Julian1" },
+      { file: "julian3.csv",  contributor: "Owomugisha Juliann" },
       { file: "inasio.csv",   contributor: "Inasio Govule" },
       { file: "muhoza.csv",   contributor: "Muhoza Maria" },
       { file: "otim1.csv",   contributor: "Otim Geoffery1" },
       { file: "otim2.csv",   contributor: "Otim Geoffery2" },
       { file: "otim3.csv",   contributor: "Otim Geoffery3" },
       { file: "otim4.csv",   contributor: "Otim Geoffery4" },
-      { file: "public square.csv",   contributor: "Public Square Team" },
-      { file: "local works.csv",   contributor: "Localworks UG" },
+      { file: "publicsquare.csv",   contributor: "Public Square Team" },
+      { file: "localworks.csv",   contributor: "Localworks UG" },
       { file: "norman.csv",   contributor: "Norman Westphal" },
       { file: "boda.csv",     contributor: "Boda Boda Man" }
     ];
