--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
       { file: "publicsquare.csv",   contributor: "Public Square Team" },
       { file: "localworks.csv",   contributor: "Localworks UG" },
       { file: "norman.csv",   contributor: "Norman Westphal" },
+      { file: "akello.csv",   contributor: "Akello Patience" },
+      { file: "patience.csv",   contributor: "Akello Patience" },
       { file: "boda.csv",     contributor: "Boda Boda Man" }
     ];
 
