--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
       { file: "localworks.csv",   contributor: "Localworks UG" },
       { file: "norman.csv",   contributor: "Norman Westphal" },
       { file: "akello.csv",   contributor: "Akello Patience" },
-      { file: "patience.csv",   contributor: "Akello Patience" },
+      { file: "patience.csv",   contributor: "Akello Patience1" },
       { file: "boda.csv",     contributor: "Boda Boda Man" }
     ];
 
